# koi

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.devcontainer/: devcontainer.json
.github/planning/: baseline.md  todo.md
.github/workflows/: release.yaml
app/: .gitignore  Cargo.toml
app/migrations/: 0002_networks.sql  0003_endpoints.sql  0005_accounts.sql  0008_quoters.sql
app/src/: error.rs  main.rs  state.rs
app/src/account/: extra.rs  mod.rs
app/src/http/: accounts.rs  health.rs  mod.rs  wallets.rs
app/src/http/account/: mod.rs
app/src/http/accounts/: mod.rs
app/src/http/asset/: mod.rs
app/src/http/auth/: mod.rs
app/src/http/net/: mod.rs
app/src/http/quoter/: mod.rs
app/src/models/: mod.rs
app/src/models/account/: balances.rs  extra.rs  identity.rs  metadata.rs  mod.rs
app/src/models/asset/: balances.rs  erc20.rs  identity.rs  metadata.rs  mod.rs
app/src/models/network/: endpoint.rs  identity.rs  manager.rs  metadata.rs  mod.rs  pool.rs
app/src/models/network/endpoint/: mod.rs  provider.rs
app/src/models/quoter/: man.rs  mod.rs
app/src/models/quoter/discover/: erc4626.rs  mod.rs  uniswap_v2.rs  uniswap_v3.rs
app/src/models/token/: identity.rs  metadata.rs  mod.rs
app/src/wallet/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/http/: docs.html  health.rs  mod.rs
crates/api/src/http/account/: derive.rs  mod.rs  tx.rs
crates/api/src/http/asset/: mod.rs
crates/api/src/rpc/: contract.rs  dispatcher.rs  mod.rs  params.rs  protocol.rs  tests.rs
crates/app/: .env  Cargo.toml
crates/app/migrations/: 0003_endpoints.sql  0004_assets.sql  0006_assets.sql  0007_vendors.sql  0009_account_groups.sql  0010_asset_icons.sql  0011_asset_icon_colors.sql
crates/app/src/: config.rs  db.rs  error.rs  lib.rs  state.rs
crates/app/src/http/: cache.rs  connection.rs  mod.rs  realtime.rs  wallet_request.rs
crates/app/src/http/account/: mod.rs
crates/app/src/http/asset/: mod.rs
crates/app/src/http/auth/: mod.rs
crates/app/src/http/net/: mod.rs  simulate.rs
crates/app/src/models/: abi.rs  alloy.rs  connection.rs  ens.rs  event.rs  image_cache.rs  mod.rs  wallet_request.rs
crates/app/src/rpc/: bindings.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: api.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: frb_generated.rs
crates/ffi/src/api/: mod.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: environment.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  blo.rs  defi.rs  form.rs  format.rs  icon.rs  layout.rs  lib.rs  loader.rs  scroll.rs  ui.rs
crates/tui/src/settings/: mod.rs
crates/web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/web/src/: index.css  routeTree.gen.ts
crates/web/src/api/: client.ts  connection.ts  context.ts  index.tsx  query.ts  realtime.ts  schema.gen.ts  wallet-request.ts
crates/web/src/components/: command-menu.tsx  dialog.tsx  sidebar.tsx
crates/web/src/routes/: __root.tsx  addressbook.tsx  index.tsx
crates/web/src/utils/: address.ts  array.ts  image-cache.ts  image-cache.tsx  narrow.ts  pointer-drag.ts  privacy.ts  text.ts
interfaces/cli/: Cargo.toml
interfaces/cli/src/: app.rs  blo.rs  config.rs  form.rs  format.rs  icon.rs  layout.rs  layout_edit.rs  lib.rs  loader.rs  ui.rs
interfaces/gui/: Cargo.toml
interfaces/gui/src/: icon.rs  lib.rs  tray.rs  webview.rs
interfaces/mobile/: .metadata  README.md  pubspec.yaml
interfaces/mobile/android/: build.gradle.kts  settings.gradle.kts
interfaces/mobile/android/app/: build.gradle.kts
interfaces/mobile/ios/Flutter/: Debug.xcconfig  koi.xcconfig
interfaces/mobile/ios/Runner/: Info.plist
interfaces/mobile/ios/Runner.xcodeproj/: project.pbxproj
interfaces/mobile/lib/: main.dart
interfaces/mobile/test/: widget_test.dart
interfaces/mobile/tool/: generate_rpc_models.dart  normalize_frb_bindings.dart
interfaces/web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.rpc.json  vite.config.ts
interfaces/web/scripts/: normalize-rpc-zod.mjs
interfaces/web/src/: index.tsx
interfaces/web/src/api/: bindings.gen.ts  bindings.zod.gen.ts  client.ts  index.tsx  query.ts  rpc-contract.gen.ts  rpc-transport.ts  rpc.gen.ts
interfaces/web/src/components/: time.tsx
interfaces/web/src/routes/: __root.tsx  index.tsx
interfaces/web/src/views/: receive.tsx
nix/: devshell.nix  mobile.nix  package.nix  versions.nix
spec/: BASELINE.md  MOBILE.md  REFACTOR.md
ui/: .gitignore  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/.tanstack/tmp/: 76d54573-1a2da4eea8fefb8fbfaf1e0a1ba1ab6a
ui/src/: App.tsx  index.css  index.tsx  routeTree.gen.ts
ui/src/api/: account.ts  client.ts  connection.ts  hook.ts  index.tsx  query.ts  schema.gen.ts
ui/src/api/account/: balance.ts  index.ts
ui/src/api/asset/: index.ts
ui/src/api/network/: index.ts
ui/src/api/quoter/: index.ts
ui/src/components/: dialog.tsx  navbar.tsx  sidebar.tsx  time.tsx  toaster.tsx
ui/src/components/account/: edit.tsx  icon.tsx  link.tsx  preview.tsx  type.tsx
ui/src/components/asset/: add.tsx  amount.tsx  icon.tsx  list.tsx  preview.tsx  quote.tsx  select.tsx  table.tsx
ui/src/components/connection/: index.tsx
ui/src/components/input/: address.tsx  button.ts  segmented.tsx  toggle.tsx
ui/src/components/navbar/: index.tsx  networks.tsx
ui/src/components/net/: add.tsx  delete.tsx  discovery.tsx  edit.tsx  icon.tsx  input.tsx
ui/src/components/quoter/: add.tsx  display.tsx  preview.tsx
ui/src/routes/: __root.tsx  index.tsx  route.tsx
ui/src/routes/onboarding/: accounts.tsx  index.tsx  networks.tsx  route.tsx  vendors.tsx
ui/src/routes/settings/: assets.tsx  index.tsx  networks.tsx  quoters.tsx  route.tsx
ui/src/utils/: address.ts  units.ts
ui/src/views/: receive.tsx
ui/src/views/receive/: qr.tsx
(+216 files in other folders)
