[package]
name = "koi"
version = "0.0.1"
edition = "2024"

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [
    "runtime-async-std",
    "tls-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
tracing = "0.1.41"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
poem = { version = "3.1.6", git = "https://github.com/v3xlabs/poem", branch = "master", features = [
    "rustls",
    "sse",
    "tempfile",
    "opentelemetry",
    "requestid",
    "embed"
] }
poem-openapi = { version = "5.1.8", git = "https://github.com/v3xlabs/poem", branch = "master", features = [
    "chrono",
    "uuid",
    "sqlx",
    "url",
    "email",
    "email_address",
    "redoc",
    "static-files",
] }
rust-embed = "8"
serde = "1.0.217"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"]}
url = { version = "2.5.2", features = ["serde"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
], default-features = false }
chrono = "0.4.39"
serde_with = { version = "3.9.0", features = ["json", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
hex = "0.4.3"
serde_json = {version="1.0.138", features = ["preserve_order", "raw_value"]}
figment = { version = "0.10.19", features = ["env", "json"] }
bytes = { version = "1.10.1", features = ["serde"] }
dotenvy = "0.15.7"
rustls = "0.23.19"
alloy = "1.0"
tracing-log = "0.2.0"
petgraph = "0.8.3"
eth-prices = "0.0.4"
strum = "0.28"
strum_macros = "0.28"
