[package]
name = "koi-api"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi_api"
path = "src/lib.rs"

[dependencies]
koi = { path = "../app", package = "koi-app" }
alloy = "1.8.3"
futures = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = ["sqlite"] }
ts-rs = { version = "=12.0.1", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
