[package]
name = "koi-client"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi_client"
path = "src/lib.rs"

[dependencies]
koi = { path = "../app", package = "koi-app" }
anyhow = "1"
futures-util = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order", "raw_value"] }
tokio-tungstenite = "0.27"
