[package]
name = "koi-daemon"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi_daemon"
path = "src/lib.rs"

[dependencies]
koi = { path = "../app", package = "koi-app" }
koi-api = { path = "../api" }
futures = "0.3"
poem = { version = "3.1.6", git = "https://github.com/v3xlabs/poem", branch = "master", features = ["embed", "websocket"] }
rust-embed = "8"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
