[package]
name = "koi-api"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi-api"
path = "src/lib.rs"

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [
    "runtime-async-std",
    "tls-rustls",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
tracing = "0.1.41"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
poem = { version = "3.1.6", git = "https://github.com/v3xlabs/poem", branch = "master", features = [
    "rustls",
    "sse",
    "tempfile",
    "opentelemetry",
    "requestid",
    "embed"
] }
poem-openapi = { version = "5.1.8", git = "https://github.com/v3xlabs/poem", branch = "master", features = [
    "chrono",
    "uuid",
    "sqlx",
    "url",
    "email",
    "email_address",
    "redoc",
    "static-files",
] }
rust-embed = "8"
serde = "1.0.217"
url = { version = "2.5.2", features = ["serde"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
], default-features = false }
chrono = "0.4.39"
serde_with = { version = "3.9.0", features = ["json", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
hex = "0.4.3"
serde_json = {version="1.0.138", features = ["preserve_order", "raw_value"]}
figment = { version = "0.10.19", features = ["env", "json"] }
dirs = "6"
bytes = { version = "1.10.1", features = ["serde"] }
rustls = "0.23.19"
alloy = { version = "1.8.3", features = ["json-rpc", "transport-throttle"] }
alloy-signer-local = "1.8.3"
coins-bip32 = "0.12"
coins-bip39 = "0.12"
k256 = "0.13"
rand = "0.8"
tracing-log = "0.2.0"
petgraph = "0.8.3"
eth-prices = { version = "1", features = ["ecb", "time"] }
strum = "0.28"
strum_macros = "0.28"
serde_plain = "1"
futures = "*"
sourcify = "0.0.4"
moka = { version = "0.12.0", features = ["future"] }
tower = "0.5.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
