[package]
name = "koi-tui"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi_tui"
path = "src/lib.rs"

[dependencies]
koi = { path = "../app", package = "koi-app" }
koi-client = { path = "../client" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "charset",
    "http2",
    "json",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order", "raw_value"] }
