[package]
name = "koi-cli"
version = "0.0.1"
edition = "2024"

[lib]
name = "koi_cli"
path = "src/lib.rs"

[dependencies]
koi = { path = "../../crates/app", package = "koi-app" }
koi-client = { path = "../../crates/client", package = "koi-client" }

ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
ratatui-image = { version = "11", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25", default-features = false, features = ["png"] }
crossterm = "0.28"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "charset",
    "http2",
    "json",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order", "raw_value"] }
